Fix text align

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body, html {
   justify-content: center;
   height: 100vh;
   width: 100vw;
+  text-align: center;
 }
 
 #navbar {
